--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,4 +13,16 @@ set_target_properties(init_test PROPERTIES
 
 target_link_libraries(init_test NxEngine NxTest)
 
+
+set(io_test_src io_test.c)
+set(tests_src ${io_test_src} ${tests_src}) 
+
+# Tests io functions 
+add_executable(io_test ${io_test_src})
+
+set_target_properties(io_test PROPERTIES 
+					  C_STANDARD 11)
+
+target_link_libraries(io_test NxEngine NxTest)
+
 source_group("src" FILES ${tests_src})
