--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ os:
 before_install:
   - brew update
   - brew install sdl2 sdl2_image
+  - brew upgrade icu4c
+  - brew link --force icu4c 
 script: 
   - mkdir build
   - cd build
